# RepositorioCEB

./: GUIAUV.md  README.md  buscador.py  calculo_day.py  compare_hipoteses.py  debug_calculo.py  debug_di_pa.py  diaria_calculator.py  main.py  pdf_generator.py  pw_sei_auto.py  pyproject.toml  requirements.txt  sei_automate.py  test_c3270.py  test_viagem_details.py  teste.txt  teste_parser.py  tools.py
modelos/: relatorio_viagem_agente.html  relatorio_viagem_agente.py
paginas/: rel_agacao.html
